# HermanMetadataProgram

./: readme.md
solana-program/: Cargo.toml
solana-program-client/: .env.example  createMetadataAccount.js  getMetadataAccount.js  package.json
solana-program/src/: lib.rs
