[package]
name = "herman_metadata"
version = "0.1.0"
edition = "2018"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.10.0"
solana-program = "1.17.30"
spl-token = { version = "~3.5.0", features = ["no-entrypoint"] }

[dev-dependencies]
base64 = "0.21.5"
solana-program-test = "1.17.30"
solana-sdk = "1.17.30"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]